--- a/ui/article one.html
+++ b/ui/article one.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            Article one
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>ARTICLE 1
+        </h3>
+        <div>
+            Sept 5
+            
+        </div>
+        <div>
+            <p>
+                 This is content of my first article. This is content of my 1st article.  This is content of my 1 article. 
+            </p>
+            
+            <p> This is content of my first article.  This is content of my first article.  This is content of my first article.
+             </p>
+             <p>
+                  This is content of my first article. This is content of my 1st article. This is content of one article. This is content of my first article.
+             </p>
+        </div>
+    </body>
 </html>
