--- a/ui/article one.html
+++ b/ui/article one.html
@@ -4,8 +4,19 @@
             Article one
         </title>
         <meta name="viewport" content= "width=device-width, initial-scale=1"/>
+        <style>
+        .container{
+            max-width:800px;
+            margin:0 auto;
+            color:grey;
+            font family:sans-serif;
+        }
+            
+        </style>
     </head>
     <body>
+        <div class="container">
+            
         <div>
             <a href="/">Home</a>
         </div>
@@ -26,6 +37,7 @@
              <p>
                   This is content of my first article. This is content of my 1st article. This is content of one article. This is content of my first article.
              </p>
+        </div>
         </div>
     </body>
 </html>
