--- a/ui/article one.html
+++ b/ui/article one.html
@@ -6,10 +6,12 @@
         <meta name="viewport" content= "width=device-width, initial-scale=1"/>
         <style>
         .container{
-            max-width:800px;
-            margin:0 auto;
-            color:grey;
-            font family:sans-serif;
+           max-width: 800px;
+    margin: 0 auto;
+    color: #039BE5;
+    padding-top: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
         }
             
         </style>
